--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "recharts": "^3.5.1",
     "lucide-react": "^0.556.0",
     "react-dom": "^19.2.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
