--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gestione-aziendale-integrata",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,11 +11,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "firebase": "^10.7.1",
+    "firebase": "^11.0.0",
     "lucide-react": "^0.303.0",
     "recharts": "^2.10.3",
     "xlsx": "^0.18.5",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "latest",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0"
   },
