--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Alea Gestionale",
   "short_name": "AleaApp",
   "id": "alea-gestionale-app",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
