--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cap:add:android": "npx cap add android",
+    "cap:sync": "npm run build && npx cap sync",
+    "cap:open:android": "npx cap open android"
   },
   "dependencies": {
+    "@capacitor/android": "^5.6.0",
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/ios": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^11.0.0",
@@ -20,6 +26,7 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.6.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
