--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
+
 {
   "name": "gestione-aziendale-integrata",
   "private": true,
-  "version": "1.0.1",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "init:android": "npm install @capacitor/android @capacitor/core @capacitor/cli && npx cap init AleaApp com.aleasistemi.gestionale --web-dir=dist",
+    "init:android": "npm install @capacitor/android@6 @capacitor/core@6 @capacitor/cli@6 && npx cap init AleaApp com.aleasistemi.gestionale --web-dir=dist",
     "build:android": "npm run build && npx cap add android",
     "sync:android": "npm run build && npx cap sync",
     "open:android": "npx cap open android"
   },
   "dependencies": {
-    "@capacitor/android": "^5.6.0",
-    "@capacitor/core": "^5.6.0",
-    "@capacitor/ios": "^5.6.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "capacitor-nfc": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^11.0.0",
@@ -27,7 +28,7 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.6.0",
+    "@capacitor/cli": "^6.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
