--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -7,8 +7,9 @@
   },
   "plugins": {
     "Keyboard": {
-      "resize": "none",
-      "style": "dark"
+      "resize": "body",
+      "style": "dark",
+      "resizeOnFullScreen": true
     }
   }
 }
