--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "build:check": "tsc && vite build",
     "preview": "vite preview",
-    "init:android": "npm install @capacitor/android@6 @capacitor/core@6 @capacitor/cli@6 && npx cap init AleaApp com.aleasistemi.gestionale --web-dir=dist",
-    "build:android": "npm run build && npx cap add android",
+    "init:android": "npx cap init AleaApp com.aleasistemi.gestionale --web-dir=dist",
+    "build:android": "npm run build && npx cap sync android",
     "sync:android": "npm run build && npx cap sync",
     "open:android": "npx cap open android"
   },
   "dependencies": {
     "@capacitor/android": "^6.0.0",
     "@capacitor/core": "^6.0.0",
-    "capacitor-nfc": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^11.0.0",
